--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,6 +26,11 @@
         <link rel="stylesheet" href="{{ (resources.Get "sass/main.scss" | resources.ToCSS (dict "indentWidth" 4 "outputStyle" "nested" "precision" 10 "targetPath" "css/main.css")).Permalink }}">
         {{ if .Site.Params.favicon }}
         <link rel="icon" href="{{ $.Site.Params.favicon | relURL }}">
+        <link rel="icon" href="/favicon.png" sizes="16x16" />
+        <link rel="icon" href="/favicon.png" sizes="32x32" />
+        <link rel="apple-touch-icon" href="/favicon.png" sizes="120x120" />
+        <link rel="apple-touch-icon" href="/favicon.png" sizes="152x152" />
+        <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
         {{ end }}
         
     </head>
